arreglos en los mensajes

--- a/Acme-Together/src/main/webapp/views/master-page/messages.properties
+++ b/Acme-Together/src/main/webapp/views/master-page/messages.properties
@@ -10,7 +10,7 @@ master.page.registerDistributor		= Register a Distributor
 master.page.registerCommercial		= Register a Commercial
 master.page.listCategories			= Categories
 master.page.listDistributors		= Distributors
-master.page.UserJoinedShoppingGroups= Joined Shopping Groups
+master.page.UserJoinedShoppingGroups= Shopping groups that you belong
 master.page.registerUser			= Register
 master.page.administrator			= Administrator
 master.page.viewMyWarehouses		= View My Warehouses
