--- a/Acme-Together/src/main/webapp/views/privateMessage/messages_es.properties
+++ b/Acme-Together/src/main/webapp/views/privateMessage/messages_es.properties
@@ -9,7 +9,7 @@
 
 
 chirp.sender = Remitente 
-chirp.subkect = Titulo
+chirp.subject = Titulo
 chirp.text = Texto
 chirp.attachments = Enlaces
 chirp.moment = Momento
