--- a/Acme-Together/src/main/webapp/views/shoppingGroup/messages.properties
+++ b/Acme-Together/src/main/webapp/views/shoppingGroup/messages.properties
@@ -13,7 +13,7 @@ sh.name = Name
 sh.description = Description
 sh.freePlaces = Free places
 sh.site = Site
-sh.puntuation = Punctuation
+sh.puntuation = Score
 sh.emptyFc = There are not registered sites
 sh.display = Know more
 sh.Info = Information about this shopping group
@@ -68,16 +68,16 @@ sh.not.join.error = Operation not allowed
 
 shoppingGroup.name 					= Name
 shoppingGroup.description			= Description
-shoppingGroup.puntuation			= Puntuation
+shoppingGroup.puntuation			= Score
 shoppingGroup.private				= Private
 shoppingGroup.lastOrderDate			= Last Order
 shoppingGroup.freePlaces			= Free Places
 shoppingGroup.addProduct            = Add Product
 
-shoppingGroup.punctuate				= Punctuate
+shoppingGroup.punctuate				= Rate this product
 
 
-shoppingGroup.punctuate				= Punctuate
+shoppingGroup.punctuate				= Rate this product
 
 user.comment = Do a new comment 
 
