User can finish a order User can make an order (It doesn't work)

--- a/Acme-Together/src/main/webapp/views/master-page/messages.properties
+++ b/Acme-Together/src/main/webapp/views/master-page/messages.properties
@@ -11,6 +11,7 @@ master.page.registerCommercial		= Register a Commercial
 master.page.listCategories			= Categories
 master.page.listDistributors		= Distributors
 master.page.UserJoinedShoppingGroups= Joined Shopping Groups
+master.page.UserOrders              = Orders
 master.page.registerUser			= Register
 master.page.administrator			= Administrator
 master.page.viewMyWarehouses		= View My Warehouses
