--- a/Acme-Together/src/main/webapp/views/master-page/messages_es.properties
+++ b/Acme-Together/src/main/webapp/views/master-page/messages_es.properties
@@ -12,6 +12,7 @@ master.page.registerCommercial		= Registrar a un Comercial
 master.page.listCategories			= Categorías
 master.page.listDistributors		= Distribuidores
 master.page.UserJoinedShoppingGroups= Grupos a los que esta unido.
+master.page.UserOrders              = Pedidos
 master.page.registerUser			= Registrarse
 master.page.administrator			= Administrador
 master.page.viewMyWarehouses		= Ver mis Almacenes
