--- a/Acme-Together/src/main/webapp/views/shoppingGroup/messages.properties
+++ b/Acme-Together/src/main/webapp/views/shoppingGroup/messages.properties
@@ -73,6 +73,7 @@ shoppingGroup.private				= Private
 shoppingGroup.lastOrderDate			= Last Order
 shoppingGroup.freePlaces			= Free Places
 shoppingGroup.addProduct            = Add Product
+shoppingGroup.makeOrder              = Make Order
 
 shoppingGroup.punctuate				= Punctuate
 
