--- a/Acme-Together/src/main/webapp/views/shoppingGroup/messages_es.properties
+++ b/Acme-Together/src/main/webapp/views/shoppingGroup/messages_es.properties
@@ -72,6 +72,7 @@ shoppingGroup.private				= Privado
 shoppingGroup.lastOrderDate			= Último Pedido
 shoppingGroup.freePlaces			= Plazas Libres
 shoppingGroup.addProduct            = Añadir Producto
+shoppingGroup.makeOrder              = Realizar Pedido
 
 shoppingGroup.punctuate				= Puntuar
 
