--- a/Acme-Together/src/main/webapp/views/order/messages.properties
+++ b/Acme-Together/src/main/webapp/views/order/messages.properties
@@ -11,3 +11,5 @@ order.finishDate				= Finish Date
 order.status					= Status
 
 order.markAsAReceived            = Received
+
+order.engagement = Engagement
