--- a/Acme-Together/src/main/webapp/views/order/messages_es.properties
+++ b/Acme-Together/src/main/webapp/views/order/messages_es.properties
@@ -13,3 +13,5 @@ order.finishDate				= Fecha Fin
 order.status					= Estado
 
 order.markAsAReceived            = Recibido
+
+order.engagement = Contrato de compra
