--- a/Acme-Together/src/main/webapp/views/shoppingGroup/messages.properties
+++ b/Acme-Together/src/main/webapp/views/shoppingGroup/messages.properties
@@ -115,4 +115,6 @@ shoppingGroup.alreadyPunctuated2	= If you wish you can re-rate.
 
 sh.leave = Leave this group
 
+eng.Info = Engagement Details
+
 
