--- a/Acme-Together/src/main/webapp/views/shoppingGroup/messages_es.properties
+++ b/Acme-Together/src/main/webapp/views/shoppingGroup/messages_es.properties
@@ -120,4 +120,6 @@ shoppingGroup.alreadyPunctuated2	= Si lo desea puede volver a puntuar.
 
 sh.leave = Abandonar este grupo
 
+eng.Info = Detalles del contrato
+
 
