--- a/Acme-Together/src/main/webapp/views/master-page/messages.properties
+++ b/Acme-Together/src/main/webapp/views/master-page/messages.properties
@@ -42,3 +42,4 @@ master.page.shoppingGroupsPublic = Shopping Groups
 
 master.page.dashboard = Dashboard
 master.page.admin.dashboard = My personal dashboard
+master.page.admin.configuration = Configurations of System
