--- a/Acme-Together/src/main/webapp/views/master-page/messages_es.properties
+++ b/Acme-Together/src/main/webapp/views/master-page/messages_es.properties
@@ -44,3 +44,4 @@ master.page.shoppingGroupsPublic = Grupos de compra
 
 master.page.dashboard = Dashboard
 master.page.admin.dashboard = Mi dashboard personal 
+master.page.admin.configuration = Configuración del Sistema
