Aplicación de cupones a orders

--- a/Acme-Together/src/main/webapp/views/shoppingGroup/messages_es.properties
+++ b/Acme-Together/src/main/webapp/views/shoppingGroup/messages_es.properties
@@ -122,4 +122,6 @@ sh.leave = Abandonar este grupo
 
 eng.Info = Detalles del contrato
 
+order.select.coupon = Selecciona un cupón para tu pedido
+
 
