--- a/Acme-Together/src/main/webapp/views/shoppingGroup/messages.properties
+++ b/Acme-Together/src/main/webapp/views/shoppingGroup/messages.properties
@@ -119,4 +119,7 @@ eng.Info = Engagement Details
 
 order.select.coupon = Select one coupon for your order
 
+sh.not.cc.validation = You cannot make an order, your credit card is not valid
+sh.users.empty = You must follow someone before
+
 
