--- a/Acme-Together/src/main/webapp/views/shoppingGroup/messages_es.properties
+++ b/Acme-Together/src/main/webapp/views/shoppingGroup/messages_es.properties
@@ -124,4 +124,7 @@ eng.Info = Detalles del contrato
 
 order.select.coupon = Selecciona un cupón para tu pedido
 
+sh.not.cc.validation = No puede hacer un pedido, su tarjeta de crédito no es válida
+sh.users.empty = Debes seguir a alguien para poder unirlo al grupo
+
 
