Arreglos en makeOrder

--- a/Acme-Together/src/main/webapp/views/shoppingGroup/messages.properties
+++ b/Acme-Together/src/main/webapp/views/shoppingGroup/messages.properties
@@ -122,4 +122,6 @@ order.select.coupon = Select one coupon for your order
 sh.not.cc.validation = You cannot make an order, your credit card is not valid
 sh.users.empty = You must follow someone before
 
+product.url.not.valid = Your product must be in the shopping web site of the group
+
 
