añadido listado de grupos de compra de una categoría concreta

--- a/Acme-Together/src/main/webapp/views/category/messages.properties
+++ b/Acme-Together/src/main/webapp/views/category/messages.properties
@@ -29,3 +29,5 @@ category.delete.error   = You can't delete this category
 category.commit.error = Category commit error
 category.confirm.delete = Are you sure about delete selected category?
 category.confirmation.delete = Category has been deleted!
+
+category.groups2 = Groups in this category
