--- a/Acme-Together/src/main/webapp/views/category/messages_es.properties
+++ b/Acme-Together/src/main/webapp/views/category/messages_es.properties
@@ -30,3 +30,5 @@ category.commit.error = No se ha podido realizar la transacción.
 category.confirm.delete = ¿Está seguro de que desea borrar la categoría seleccionada?
 category.confirmation.delete = La categoría ha sido borrada
 
+category.groups2 = Grupos en esta categoría
+
