--- a/Acme-Together/src/main/webapp/views/shoppingGroup/messages.properties
+++ b/Acme-Together/src/main/webapp/views/shoppingGroup/messages.properties
@@ -124,4 +124,8 @@ sh.users.empty = You must follow someone before
 
 product.url.not.valid = Your product must be in the shopping web site of the group
 
+category.groups = Other shopping groups in this category
+
+category.sh.empty = There are no groups in this category, be the first to create one! 
+
 
