--- a/Acme-Together/src/main/webapp/views/shoppingGroup/messages_es.properties
+++ b/Acme-Together/src/main/webapp/views/shoppingGroup/messages_es.properties
@@ -129,3 +129,7 @@ sh.users.empty = Debes seguir a alguien para poder unirlo al grupo
 
 product.url.not.valid = Su producto debe estar en la página de compra del grupo
 
+category.groups = Otros grupos de compra en esta categoría
+
+category.sh.empty = No hay grupos en esta categoría, ¡se el primero en crear uno!
+
