arreglos en TODO el proyecto (Adri se enfada)

--- a/Acme-Together/src/main/webapp/views/shoppingGroup/messages.properties
+++ b/Acme-Together/src/main/webapp/views/shoppingGroup/messages.properties
@@ -128,4 +128,6 @@ category.groups = Other shopping groups in this category
 
 category.sh.empty = There are no groups in this category, be the first to create one! 
 
+order.distributors = Select one distributor for your order
+
 
