--- a/Acme-Together/src/main/webapp/views/shoppingGroup/messages_es.properties
+++ b/Acme-Together/src/main/webapp/views/shoppingGroup/messages_es.properties
@@ -133,3 +133,5 @@ category.groups = Otros grupos de compra en esta categoría
 
 category.sh.empty = No hay grupos en esta categoría, ¡se el primero en crear uno!
 
+order.distributors = Selecciona un distribuidor para tu pedido
+
