--- a/Acme-Together/src/main/webapp/views/misc/messages.properties
+++ b/Acme-Together/src/main/webapp/views/misc/messages.properties
@@ -9,6 +9,7 @@
 typeMismatch.java.util.Date		= Invalid moment
 typeMismatch.double				= Invalid amount
 typeMismatch.int				= Invalid amount
+PasswordMatches	= The passwords must be the same
 
 javax.validation.constraints.DecimalMax.message  = Too large (max = {value})
 javax.validation.constraints.DecimalMin.message  = Too small (min = {value})
