más passwordMatches MAS MAS MAS MAS TODOS LOS POSIBLES; PUES TODOS

--- a/Acme-Together/src/main/webapp/views/misc/messages.properties
+++ b/Acme-Together/src/main/webapp/views/misc/messages.properties
@@ -10,6 +10,8 @@ typeMismatch.java.util.Date		= Invalid moment
 typeMismatch.double				= Invalid amount
 typeMismatch.int				= Invalid amount
 PasswordMatches	= The passwords must be the same
+PasswordMatchesDistributor	= The passwords must be the same
+PasswordMatchesCommercial	= The passwords must be the same
 
 javax.validation.constraints.DecimalMax.message  = Too large (max = {value})
 javax.validation.constraints.DecimalMin.message  = Too small (min = {value})
