--- a/Acme-Together/src/main/webapp/views/misc/messages_es.properties
+++ b/Acme-Together/src/main/webapp/views/misc/messages_es.properties
@@ -10,6 +10,8 @@ typeMismatch.java.util.Date		= Momento inválido
 typeMismatch.double				= Cantidad inválida
 typeMismatch.int				= Cantidad inválida
 PasswordMatches	= Las contraseñas deben coincidir
+PasswordMatchesDistributor	= Las contraseñas deben coincidir
+PasswordMatchesCommercial	= Las contraseñas deben coincidir
 
 javax.validation.constraints.DecimalMax.message  = Muy grande (max = {value})
 javax.validation.constraints.DecimalMin.message  = Muy pequeño (min = {value})
