display de products en un order

--- a/Acme-Together/src/main/webapp/views/user/messages_es.properties
+++ b/Acme-Together/src/main/webapp/views/user/messages_es.properties
@@ -15,6 +15,7 @@ user.name =  Nombre
 user.surname = Apellido
 user.birthDate = Fecha de nacimiento
 user.desc = Descripción
+user.address = Direccion
 
 user.CreditCard = Información de la tarjeta de crédito
 
