--- a/Acme-Together/src/main/webapp/views/warehouse/messages.properties
+++ b/Acme-Together/src/main/webapp/views/warehouse/messages.properties
@@ -21,10 +21,17 @@ warehouse.cancel		= Cancel
 warehouse.create		= Create
 warehouse.orders		= Orders
 
-
 order.initDate	 = Init Date
 order.finishDate	 = Finish Date
 order.status		= Status
 order.totalPrice	= Total Price
 order.changeStatus	= Change Status
 order.removeOrder	= Remove Order
+
+order.products = Products in this order
+product.name						= Name
+product.url							= URL
+product.referenceNumber				= Reference Number
+product.price						= Price
+product.user = User
+product.userAddress = User Address
