--- a/Acme-Together/src/main/webapp/views/warehouse/messages_es.properties
+++ b/Acme-Together/src/main/webapp/views/warehouse/messages_es.properties
@@ -27,3 +27,11 @@ order.status		= Estado
 order.totalPrice	= Precio Total
 order.changeStatus	= Cambiar Estado Pedido
 order.removeOrder	= Eliminar Pedido
+
+order.products = Productos en este pedido 
+product.name						= Nombre	
+product.url							= URL
+product.referenceNumber				= Referencia
+product.price						= Precio
+product.user = Usuario
+product.userAddress = Direccion del usuario 
