--- a/Acme-Together/src/main/webapp/views/user/messages.properties
+++ b/Acme-Together/src/main/webapp/views/user/messages.properties
@@ -14,6 +14,7 @@ user.name =  Name
 user.surname = Surname
 user.birthDate = Birth Date
 user.desc = Description
+user.address = Address
 
 user.CreditCard = Credit Card Information 
 
