COOKIES Y ABOUT US

--- a/Acme-Together/src/main/webapp/views/master-page/messages.properties
+++ b/Acme-Together/src/main/webapp/views/master-page/messages.properties
@@ -20,6 +20,10 @@ master.page.listCoupons				= Coupons
 master.page.customer				= Customer
 
 
+
+master.page.cookies					= We request your permission to obtain statistical data on its Navigation on this website, pursuant to Royal Decree-Law 13/2012. If you continue to browse we consider to accept the use of cookies.
+master.page.cookes.information		= More information
+master.page.about					= About us
 master.page.profile 				= Profile
 
 
