--- a/Acme-Together/src/main/webapp/views/master-page/messages_es.properties
+++ b/Acme-Together/src/main/webapp/views/master-page/messages_es.properties
@@ -18,7 +18,9 @@ master.page.administrator			= Administrador
 master.page.viewMyWarehouses		= Ver mis Almacenes
 master.page.listCoupons				= Cupones
 
-
+master.page.cookies					= Solicitamos su permiso para obtener datos estadíticos de su navegación en esta web, en cumplimiento del Real Decreto-ley 13/2012. Si continua navegando consideramos que acepta el uso de cookies.
+master.page.cookes.information		= Más información
+master.page.about					= Sobre nosotros
 master.page.customer				= Cliente
 
 
