algunos avances mas

--- a/Acme-Together/src/main/webapp/views/user/messages_es.properties
+++ b/Acme-Together/src/main/webapp/views/user/messages_es.properties
@@ -54,7 +54,7 @@ user.editProfile = Editar Perfil
 user.profile = Perfil
 user.ShoppingGroups = Mis grupos de compra publicos
 user.follow = seguir!
-user.unfollow = dejar de seguir!
+user.unfollow = no seguir!
 
 shoppingGroup.name 					= Nombre
 shoppingGroup.description			= Descripción
