Terminado, me saco la polla. mi pm esta supercontento y la gordi sabe que trabajo

--- a/Acme-Together/src/main/webapp/views/distributor/messages.properties
+++ b/Acme-Together/src/main/webapp/views/distributor/messages.properties
@@ -49,7 +49,7 @@ distributor.commit.error					= Couldn't commit this operation
 distributor.banuser = Ban
 distributor.unBanuser = Unban 
 distributor.editprofile = Edit Profile
-
+distributor.viewProfile = View Profile
 
 dataProtection.title					= ORGANIC LAW OF PROTECTION OF PERSONAL DATA
 dataProtection.whatIs					= In this Section there is exposed the Privacy Policy that regulates the use of the service of the web site Acme BnB that it puts to the disposition of the Internet distributor, on the information of personal character that it can facilitate when he visits our web page.
