--- a/Acme-Together/src/main/webapp/views/distributor/messages_es.properties
+++ b/Acme-Together/src/main/webapp/views/distributor/messages_es.properties
@@ -53,6 +53,7 @@ distributor.banuser = Prohibir
 distributor.unBanuser = Permitir 
 
 distributor.editProfile = Editar Perfil
+distributor.viewProfile = Ver Perfil
 
 dataProtection.title					= LEY ORGÁNICA DE PROTECCIÓN DE DATOS
 dataProtection.whatIs					= En esta Sección se expone la Política de Privacidad que regula el uso del servicio del sitio web Acme BnB que pone a la disposición de los usuarios de Internet, sobre la información de carácter personal que puede facilitar cuando visita nuestra página web.
