--- a/Acme-Together/src/main/webapp/views/master-page/messages_es.properties
+++ b/Acme-Together/src/main/webapp/views/master-page/messages_es.properties
@@ -11,7 +11,7 @@ master.page.registerDistributor		= Registrar a un Distribuidor
 master.page.registerCommercial		= Registrar a un Comercial
 master.page.listCategories			= Categorías
 master.page.listDistributors		= Distribuidores
-master.page.UserJoinedShoppingGroups= Grupos a los que esta unido.
+master.page.UserJoinedShoppingGroups= Grupos a los que esta unido
 master.page.UserOrders              = Pedidos
 master.page.registerUser			= Registrarse
 master.page.administrator			= Administrador
