--- a/Acme-Together/src/main/webapp/views/shoppingGroup/messages_es.properties
+++ b/Acme-Together/src/main/webapp/views/shoppingGroup/messages_es.properties
@@ -17,7 +17,7 @@ sh.puntuation = Puntuación
 sh.emptyFc = No hay sitios registrados
 sh.users   = Usuarios en este grupo de compra
 sh.products = Productos en este grupo de compra
-sh.display = Saber más
+sh.display = Ver
 sh.Info = Información acerca del grupo de compra
 sh.users = Usuarios en este grupo de compra
 sh.products = Productos en este grupo de compra
@@ -122,7 +122,7 @@ sh.leave = Abandonar este grupo
 
 eng.Info = Detalles del contrato
 
-order.select.coupon = Selecciona un cupón para tu pedido
+order.select.coupon = Selecciona un cupón para tu pedido: 
 
 sh.not.cc.validation = No puede hacer un pedido, su tarjeta de crédito no es válida
 sh.users.empty = Debes seguir a alguien para poder unirlo al grupo
