--- a/Acme-Together/src/main/webapp/views/user/messages.properties
+++ b/Acme-Together/src/main/webapp/views/user/messages.properties
@@ -79,7 +79,8 @@ dataProtection.exercisesLaw1			= We may collect information from you when you fi
 dataProtection.exercisesLaw2			= In addition to personal information, we may also collect information about you automatically when you visit the Website by using cookies (small text files) trends which we may make use of ourselves, or pass to our associated companies or to unconnected parties and our advertising partner may also use cookies to serve advertisements that it believes are most likely to be of use or interest to you.  
 dataProtection.howChangeDataTitle		= 4. HOW TO MODIFY THE USER INFORMATION.
 dataProtection.howChangeData			= In order to modify the profile data, you must be registered on the system. Once you have logged in, you will see an option over your profile. Hovering your mouse over the former, an option will be displayed in order to provide a form allowing you to modify your profile data. Once you have modified all the data you have considered necessary, clicking on the Save button will save the data and your profile data will have been successfully modified.
-
+dataProtection.aboutOrders              = 5. ABOUT YOUR ORDERS
+dataProtection.aboutOrdersMessage       = When the creator of the group do the order and generate the engagement, you must pay all the products that you added to the shopping group. If you refuse, you will be banned and you must pay a penalty fee.
 									
 
 creditCard.Information = CreditCard Information
