--- a/Acme-Together/src/main/webapp/views/shoppingGroup/messages.properties
+++ b/Acme-Together/src/main/webapp/views/shoppingGroup/messages.properties
@@ -15,7 +15,7 @@ sh.freePlaces = Free places
 sh.site = Site
 sh.puntuation = Score
 sh.emptyFc = There are not registered sites
-sh.display = Know more
+sh.display = Display
 sh.Info = Information about this shopping group
 sh.users = Users in this shopping group
 sh.products = Products in this shopping group
@@ -117,7 +117,7 @@ sh.leave = Leave this group
 
 eng.Info = Engagement Details
 
-order.select.coupon = Select one coupon for your order
+order.select.coupon = Select one coupon for your order:
 
 sh.not.cc.validation = You cannot make an order, your credit card is not valid
 sh.users.empty = You must follow someone before
