--- a/Acme-Together/src/main/webapp/views/user/messages_es.properties
+++ b/Acme-Together/src/main/webapp/views/user/messages_es.properties
@@ -80,7 +80,8 @@ dataProtection.exercisesLaw1			= Aquellas personas físicas que faciliten sus dat
 dataProtection.exercisesLaw2			= Dado el carácter confidencial de la información, usted no podrá ejercitar sus derechos telefonicamente, debido a que este medio no permite acreditar la identidad como titular de los datos registrados. El interesado podrá exercitar sus derechos mediante comunicación por escrito dirigida al Registro General de Acme BnB Corporation, con la siguiente referencia en su carta: "LOPD Ejercicio de derechos" (junto a su solicitud escrita y firmada, deberá acreditar su personalidad aportando fotocopia del D.N.I) 
 dataProtection.howChangeDataTitle		= 4. COMO CAMBIAR LOS DATOS DE USUARIO
 dataProtection.howChangeData			= Para cambiar los datos de usuario, tienes que estar registrado previamente en el sistema. Una vez inicie sesión con su usuario, verá en la barra superior un apartador sobre tu perfil. Al pasar por ese apartado se desplagará un menu, mostrando la opción "Editar datos de perfil". Al pulsar sobre ella se mostrará un formulario que presenta varios campos disponibles para editar, además de visualizar los campos obligatorios con un "*" . Al finalizar la edición, tendrá que pulsar sobre Aceptar para terminar con la edición.
-
+dataProtection.aboutOrders              = 5. SOBRE TUS PEDIDOS 
+dataProtection.aboutOrdersMessage       = Una vez que el creador del grupo de compra realice el pedido y se genere el contrato de compra, debes comprometerte a realizar el pago de los productos que hayas decidido añadir al grupo de compra, la negativa, sera sancionada con el baneo de la cuenta asi como de una penalizacion economica.
 
 
 
